--- a/tmall-web/src/main/webapp/css/back/style.css
+++ b/tmall-web/src/main/webapp/css/back/style.css
@@ -117,3 +117,14 @@ th {
   font-size: 14px;
   text-align: center
 }
+
+p {
+  padding: 8px 15px;
+  border-radius: 4px;
+}
+
+.success {
+  font-size: medium;
+  text-align: center;
+  margin-bottom: 20px
+}
